# simavr

./: .gitignore  README.md  meson.build
simavr/sim/: sim_vcd_file.c
tools/: avr-probe.c
